--- a/RoomMate/Base.lproj/Main.storyboard
+++ b/RoomMate/Base.lproj/Main.storyboard
@@ -986,9 +986,7 @@
                             <constraint firstItem="lsl-Zc-zQa" firstAttribute="trailing" secondItem="iil-SU-HzS" secondAttribute="trailingMargin" id="AB6-Jn-Q4Y"/>
                             <constraint firstItem="lsl-Zc-zQa" firstAttribute="leading" secondItem="iil-SU-HzS" secondAttribute="leadingMargin" id="BfX-5A-Rdd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fEI-ih-pIh" secondAttribute="trailing" id="Iz7-uI-e0I"/>
-                            <constraint firstItem="fEI-ih-pIh" firstAttribute="centerY" secondItem="iil-SU-HzS" secondAttribute="centerY" id="TId-nd-jUJ">
-                                <variation key="heightClass=compact" constant="-30"/>
-                            </constraint>
+                            <constraint firstItem="fEI-ih-pIh" firstAttribute="centerY" secondItem="iil-SU-HzS" secondAttribute="centerY" id="TId-nd-jUJ"/>
                             <constraint firstAttribute="trailing" secondItem="OY2-i2-i6n" secondAttribute="trailing" constant="-10" id="arG-O8-ekc"/>
                             <constraint firstItem="fEI-ih-pIh" firstAttribute="leading" secondItem="iil-SU-HzS" secondAttribute="leadingMargin" id="g4S-cd-W2r"/>
                             <constraint firstItem="OY2-i2-i6n" firstAttribute="leading" secondItem="iil-SU-HzS" secondAttribute="leading" constant="-10" id="iv0-6s-zZE"/>
@@ -1163,17 +1161,17 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mmt-N5-Zhf">
-                                <rect key="frame" x="16" y="434" width="288" height="70"/>
+                                <rect key="frame" x="16" y="434" width="198" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fqd-OQ-4la">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="198" height="30"/>
                                         <state key="normal" title="Join House"/>
                                         <connections>
                                             <segue destination="ZgN-h6-eHt" kind="show" id="AnI-B8-bzY"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t3z-gI-S0X">
-                                        <rect key="frame" x="0.0" y="40" width="288" height="30"/>
+                                        <rect key="frame" x="0.0" y="40" width="198" height="30"/>
                                         <state key="normal" title="Create New House"/>
                                         <connections>
                                             <segue destination="cdU-Xk-SL5" kind="show" id="Jpf-h1-exf"/>
@@ -1182,24 +1180,23 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-home (1)" translatesAutoresizingMaskIntoConstraints="NO" id="Btq-gO-YiA">
-                                <rect key="frame" x="244" y="366" width="60" height="60"/>
+                                <rect key="frame" x="234" y="434" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="b5w-Ge-num"/>
-                                    <constraint firstAttribute="width" constant="60" id="bnX-Uw-4dx"/>
+                                    <constraint firstAttribute="width" constant="70" id="4Bp-lV-cI8"/>
+                                    <constraint firstAttribute="height" constant="70" id="eUF-Hz-VLn"/>
                                 </constraints>
-                                <variation key="heightClass=compact" hidden="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Btq-gO-YiA" firstAttribute="trailing" secondItem="EY4-a4-W9T" secondAttribute="trailingMargin" id="7I8-Et-vwF"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Btq-gO-YiA" secondAttribute="bottom" constant="15" id="CxB-Kd-V5G"/>
                             <constraint firstItem="xc9-q6-k9W" firstAttribute="top" secondItem="EY4-a4-W9T" secondAttribute="topMargin" constant="15" id="FdM-E1-FVu"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Btq-gO-YiA" secondAttribute="trailing" id="GrB-mN-eCY"/>
-                            <constraint firstItem="Mmt-N5-Zhf" firstAttribute="leading" secondItem="EY4-a4-W9T" secondAttribute="leadingMargin" id="XEE-MF-XsB"/>
-                            <constraint firstItem="Mmt-N5-Zhf" firstAttribute="top" secondItem="Btq-gO-YiA" secondAttribute="bottom" constant="8" id="YWk-2I-aei"/>
-                            <constraint firstItem="Mmt-N5-Zhf" firstAttribute="trailing" secondItem="EY4-a4-W9T" secondAttribute="trailingMargin" id="fgf-MK-kjL"/>
+                            <constraint firstItem="Mmt-N5-Zhf" firstAttribute="leading" secondItem="EY4-a4-W9T" secondAttribute="leadingMargin" id="GNc-a7-orA"/>
+                            <constraint firstItem="Btq-gO-YiA" firstAttribute="leading" secondItem="Mmt-N5-Zhf" secondAttribute="trailing" constant="20" id="NGn-0v-Kbt"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xc9-q6-k9W" secondAttribute="trailing" id="g9n-ut-oL1"/>
                             <constraint firstItem="xc9-q6-k9W" firstAttribute="leading" secondItem="EY4-a4-W9T" secondAttribute="leadingMargin" id="m4X-ye-Txm"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="Mmt-N5-Zhf" secondAttribute="bottom" constant="15" id="ypb-B3-9bk"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Mmt-N5-Zhf" secondAttribute="bottom" constant="15" id="maf-A2-uiK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dd8-Pd-rhB"/>
                     </view>
