--- a/RoomMate/Base.lproj/Main.storyboard
+++ b/RoomMate/Base.lproj/Main.storyboard
@@ -165,13 +165,13 @@
                                         <rect key="frame" x="0.0" y="40" width="288" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter password again" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jwW-sA-rfT">
                                         <rect key="frame" x="0.0" y="80" width="288" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -233,7 +233,7 @@
                                         <rect key="frame" x="0.0" y="200" width="288" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -1161,17 +1161,23 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mmt-N5-Zhf">
-                                <rect key="frame" x="16" y="434" width="198" height="70"/>
+                                <rect key="frame" x="16" y="414" width="188" height="90"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fqd-OQ-4la">
-                                        <rect key="frame" x="0.0" y="0.0" width="198" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="188" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Dks-qI-Upe"/>
+                                        </constraints>
                                         <state key="normal" title="Join House"/>
                                         <connections>
                                             <segue destination="ZgN-h6-eHt" kind="show" id="AnI-B8-bzY"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t3z-gI-S0X">
-                                        <rect key="frame" x="0.0" y="40" width="198" height="30"/>
+                                        <rect key="frame" x="0.0" y="50" width="188" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="NWw-cz-x2M"/>
+                                        </constraints>
                                         <state key="normal" title="Create New House"/>
                                         <connections>
                                             <segue destination="cdU-Xk-SL5" kind="show" id="Jpf-h1-exf"/>
@@ -1180,10 +1186,10 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-home (1)" translatesAutoresizingMaskIntoConstraints="NO" id="Btq-gO-YiA">
-                                <rect key="frame" x="234" y="434" width="70" height="70"/>
+                                <rect key="frame" x="224" y="424" width="80" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="4Bp-lV-cI8"/>
-                                    <constraint firstAttribute="height" constant="70" id="eUF-Hz-VLn"/>
+                                    <constraint firstAttribute="width" constant="80" id="4Bp-lV-cI8"/>
+                                    <constraint firstAttribute="height" constant="80" id="eUF-Hz-VLn"/>
                                 </constraints>
                             </imageView>
                         </subviews>
